// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink should render correctly 1`] = `
<a
  className="skip-link"
  href="#main"
>
  Skip to main content
</a>
`;

exports[`SkipLink should support arbitrary props 1`] = `
<a
  className="skip-link"
  href="#main"
  testID="123"
>
  Skip to main content
</a>
`;

exports[`SkipLink should support custom class names 1`] = `
<a
  className="skip-link custom-classname"
  href="#main"
>
  Skip to main content
</a>
`;
